--- a/notebooks/MLP.ipynb
+++ b/notebooks/MLP.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "    In this project, I decided to use the ReLU (Rectified Linear Unit) as the activation function in my neural network model. ReLU is a popular choice due to its simplicity and efficiency. Defined as f(x) = max(0, x), it simply passes positive inputs directly while outputting zero for any negative input.\n",
     "\n",
-    "    The use of ReLU in my model is primarily to introduce non-linearity into the network, which enables the model to learn complex patterns from the data. By incorporating ReLU in the network, I have been able to manage and reduce the issue of the **vanishing gradient problem**-- a situation where gradients are close to zero, making the network hard to train.\n",
+    "    The use of ReLU in my model is primarily to introduce non-linearity into the network, which enables the model to learn complex patterns from the data. By incorporating ReLU in the network, I have been able to manage and reduce the issue of the **vanishing gradient problem** -- a situation where gradients are close to zero, making the network hard to train.\n",
     "\n",
     "    Vanishing gradient problem can slow down the training process, or in the worst case compeletly halt the network from further training. The ReLU activation function helps to mitigate this issue because its derivative is always 1 for positive input, which ensures that the gradient does not vanish during the backward propagation.\n",
     "    \n",
@@ -955,7 +955,7 @@
     "\n",
     "To speed up the hyperparameter optimization process, I've utilized Python's multiprocessing module with a specific number of threads, denoted by THREADS. This allows multiple model configurations to be evaluated simultaneously.\n",
     "\n",
-    "The random_search function is then run for 1000 iterations, testing different hyperparameters each time. For each set of hyperparameters, the model's performance is evaluated 32 times, denoted by `reps=32`, to provide a more reliable measure of its performance.\n",
+    "The `random_search` function is then run for 1000 iterations, testing different hyperparameters each time. For each set of hyperparameters, the model's performance is evaluated 32 times, denoted by `reps=32`, to provide a more reliable measure of its performance.\n",
     "\n",
     "The total CPU and wall time are being tracked using the `%%time` magic command. In this instance, the process took nearly 6 hours and 41 minutes of CPU time, and a wall time of 6 hours and 40 minutes.\n",
     "\n",
@@ -1560,7 +1560,7 @@
     "\n",
     "- Neural Network model: This model shows a very high performance with an accuracy of approximately 95.97%, which is quite competitive but slightly less than the Random Forest and Gaussian Naive Bayes models.\n",
     "\n",
-    "In conclusion, while all models provided a reasonable level of accuracy, the Gaussian Naive Bayes and Random Forest models showed exceptional performance on this dataset. The choice between these two models could then depend on other factors such as computational cost or interpretability."
+    "In conclusion, while all models provided a reasonable level of accuracy, the Gaussian Naive Bayes and Random Forest models showed exceptional performance on this dataset. The choice between these two models could then depend on other factors such as computational cost or interpretability, my self implemented model is not good enought for this dataset."
    ]
   }
  ],
@@ -1580,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
